Error responses will now reject the sendMessage promise instead of resolving them.
Additionally, promises are now more aggressive about rejecting on unexpected errors, to avoid situations where promises can await forever.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "docs": "typedoc --entryPointStrategy resolve ./src/phoenix-websocket.ts --out docs/"
+    "docs": "typedoc --entryPointStrategy resolve ./src/phoenix-websocket.ts --out docs/",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
