--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 
 env:
     DESIRED_NODE_VERSION: 20
+    DESIRED_PNPM_VERSION: '8.14.1'
 
 jobs:
   build-and-deploy:
@@ -27,6 +28,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ env.DESIRED_NODE_VERSION }}
+      - name: PNPM Install
+        run: npm install -g pnpm@${{ env.DESIRED_PNPM_VERSION }}
 
       - name: Set sources version
         run: |
@@ -54,12 +57,12 @@ jobs:
         with:
           filename: package.json
 
-      - name: Install npm dependencies
+      - name: Install pnpm dependencies
         run: |
-          npm ci --production=false
+          pnpm install --frozen-lockfile
 
       - name: Run build
-        run: npm run build
+        run: pnpm run build
 
       - uses: actions/setup-node@v3
         with:
@@ -68,13 +71,13 @@ jobs:
       # NOTE:
       # By default NPM access tokens expire after a year, and so these will need to be updated when the build starts to fail.
       - name: Publish
-        run: npm publish --access public
+        run: pnpm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
       - name: Generate docs
-        run: npm run docs
+        run: pnpm run docs
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
